sr bash script
